# formai

./: .env.example  .gitignore  .har  .mcp.json  APACHE2_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI.md  Cargo.toml  FINAL_SETUP_GUIDE.md  FormAI.bat  LICENSE.txt  Models.json  QUICK_START_ADMIN.md  README-SIMPLE.txt  README.md  SIMPLE.md  STEEL_BROWSER_INTEGRATION_PLAN.md  admin_server.py  apache2-setup.sh  build-formai.bat  build-release.bat  callback_standalone.py  check_ollama_model.py  cli.py  client_callback.py  credit card drop down.json  formai_enhanced_server.py  formai_entry.py  formai_server.py  future_plan.md  geminifeats.md  install.ps1  install.sh  lightning_autofill_detailed_analysis.md  package.json  pyinstaller_utils.py  pyproject.toml  queue_manager.py  quick-start.bat  (+25 more)
.claude/: admin-callback.md  ai-integration.md  api-design.md  automation-engine.md  cli-usage.md  database.md  field-mapping.md  multistep-forms.md  python-modules.md  recording-system.md  security.md  settings.local.json  sites-system.md  standards.md  testing.md  ui-patterns.md  update-system.md
.playwright-mcp/: NLMMGNHGDEFFJKDCKMIKFPNDDKBBFKKK-14-24-3-0.crx
14.24.3_0/: devmode.html  help.html  manifest.json  offscreen.html  options.html  permissions.html  sidepanel.html
ai_training_data/: enhanced_dropdown_training.json
api_keys/: openrouter.json
archive/: quick_start.bat
chrome_profile/: Local State
components/: app-sidebar.tsx  search-form.tsx  sidebar-example.tsx  version-switcher.tsx
config/: ai_learning_data.json  components.json  tsconfig.json
core/: client_callback.py  job_models.py  queue_manager.py  worker.py
database/: __init__.py  db.py  repositories.py
docs/: ADMIN_CALLBACK_SYSTEM.md  AI_FORM_FILLING.md  AI_PROVIDERS.md  AI_RECORDING_INSTRUCTIONS.md  AI_TRAINING_SYSTEM.md  APACHE2_DEPLOYMENT.md  API_KEY_SETUP.md  ARCHITECTURE.md  AUTOMATION_TEST_RESULTS.md  CDP_REPLAY_AI.md  DEEPSEEK_OCR_INTEGRATION.md  DOMAIN_SSL_SETUP.md  EXTENSION_SYSTEM.md  FORMAI_IMPROVEMENTS.md  GEMINI.md  MCP_AUTOMATED_RECORDING.md  OLLAMA_SETUP.md  README.md  RECORDING_QUICK_REFERENCE.md  RECORDING_TO_PRODUCTION_WORKFLOW.md  TELEGRAM_INTEGRATION_ROADMAP.md  VPS_DEPLOYMENT.md  lightning_autofill_comprehensive_analysis.md  playwright_training_summary.md  project-worth.md  websites.md
field_mappings/: roboform_template.json  roboform_test_mapping.json
profiles/: business-profile.json  chris.json  complete_roboform.json  demo-profile.json  koodos.json  test.json
project-kit/: .cursorrules.template  .gitignore.template  CHANGELOG.md  CLAUDE.md  GETTING_STARTED.md  README.md  setup.ps1  setup.sh
recordings/: 99b94e119ba7.json  eadcfcf242c6.json  recordings_index.json  roboform_all_fields_recording.json
saved_requests/: cdc6af11-cce2-4811-8e37-c1ca8afa96c7.json
saved_urls/: groups.json  playwright_recording_1757393639.py  playwright_recording_1757393976.py  saved_urls.json  www.facebook.com_r.php.py  www.macys.com_account_createaccount.py  www.roboform.com_filling-test-all-fields.py  www.victoriassecret.com_us_account_create.py
scripts/: FormAI.bat  build.py  build.sh  generate_manifest.py  install-browser.bat  install.ps1
servers/: simple_server.py
sites/: analyzed_chunk1.txt  analyzed_chunk2.txt  analyzed_chunk3.txt  analyzed_chunk4.txt  batch_recorder.js  captcha_urls.txt  cleanup_dupes.js  playwright_runner.js  profile.json  results_chunk1.json  results_chunk2.json  results_chunk3.json  results_chunk4.json  sites.json  test_batch.txt
src/: dropdown_service.rs  field_mapping_service.rs  firecrawl_service.rs  main.rs  models.rs  openrouter.rs  profile_adapter.rs  services.rs  stats.rs  ui.rs  websocket.rs
static/: Models.json  index.html.backup
tests/: test_chrome_recording.json  test_extension_system.py  test_recording_workflow.py  test_roboform.py  test_roboform_simple.py
tools/: EXTENSION_SYSTEM.md  agent_memory.py  ai_form_filler.py  ai_recording_analyzer.py  ai_value_replacer.py  audio_handler.py  auto_updater.py  autofill_engine.py  browser_use_automation.py  camera_handler.py  camera_mock.py  captcha_extension.py  captcha_solver.py  chrome_devtools_replay.py  chrome_recorder_parser.py  csrf_detector.py  device_scanner.py  email_handler.py  enhanced_field_detector.py  enhanced_field_mapper.py  example_extension_usage.py  (+35 more)
(+231 files in other folders)
