[package]
name = "formai-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "formai-rust"
path = "src/main.rs"

# Performance optimizations
[profile.release]
# Enable maximum optimizations
opt-level = 3
# Link-time optimization for better performance
lto = true
# Single codegen unit for better optimization
codegen-units = 1
# Enable panic = abort for smaller binary and better performance
panic = "abort"
# Strip symbols for smaller binary
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 1

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }


# Browser automation - Playwright for reliable Chromium control
playwright = "0.0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono", "uuid"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"

# HTTP client for Firecrawl API
reqwest = { version = "0.12", features = ["json"] }

# Base64 encoding for API key encryption
base64 = "0.22"

# Template engine removed - using static HTML files

# Environment variables
dotenv = "0.15"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"