[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formai"
version = "1.2.0"
description = "AI-powered browser automation platform for form filling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FormAI Team"}
]
keywords = ["automation", "form-filling", "selenium", "ai", "browser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "seleniumbase>=4.32.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "websockets>=13.1",
    "aiofiles>=24.1.0",
    "pillow>=11.2.1",
    "numpy>=1.26.4",
    "pydantic>=2.11.5",
    "python-dotenv>=1.0.1",
    "redis>=5.0.1",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "colorama>=0.4.6",
    "pystray>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
formai = "formai_server:main"
formai-cli = "cli:main"

[project.urls]
Homepage = "https://github.com/skstgu8080/formai"
Documentation = "https://github.com/skstgu8080/formai#readme"
Repository = "https://github.com/skstgu8080/formai.git"
Issues = "https://github.com/skstgu8080/formai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "database*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
